# Food_Recipe_App

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
app/Taste_BackEnd/: .env.sample  app.py  main.py
app/Taste_BackEnd/core/: config.py
app/Taste_BackEnd/model/: cuisine.py  image.py  recipe.py
app/Taste_BackEnd/repository/: cuisine.py  image.py  recipe.py
app/Taste_BackEnd/routers/: cuisine.py  image.py  recipe.py
app/Taste_BackEnd/utility/: langchain_ollama.py  openai_chain.py
app/Taste_FrontEnd/: config.js  index.html  script.js  style.css
